--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+kurento-media-server-6.0 (6.1.0) testing; urgency=medium
+
+  [ Jose Antonio Santos Cadenas ]
+  * Prepare for next development iteration
+  * README: Fix installation instructions
+  * logging: Print pid correctly
+  * Prepare release 6.1.0
+
+  [ José Antonio Santos Cadenas ]
+
+ -- Jose Antonio Santos Cadenas <santoscadenas@gmail.com>  Tue, 01 Sep 2015 15:59:37 +0200
+
 kurento-media-server-6.0 (6.0.0) testing; urgency=medium
 
   [ Jose Antonio Santos Cadenas ]
