--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,26 @@
+kurento-media-server-6.0 (6.3.0) testing; urgency=medium
+
+  [ Jose Antonio Santos Cadenas ]
+  * Prepare for next development iteration
+  * Remove rabbitmq support
+  * WebSocketTransport: Avoid memory leak when sessions are destroyed
+  * main: print compilation time and date
+  * Remove SignalHandler it is not working properly
+  * ServerMethods: Adapt to new ModuleInfo structure
+  * Print stack trace when program crashes
+  * death_handler: Try to get line numbers when dbg package is installed
+  * death_handler: Fix compilation error when -O2 is enabled
+  * server_json_tests: Run tests using ipv6 client
+  * server_envent_test: Fix typo in tests
+  * server_events_test: Improve test to check that received event are correct
+  * WebSocketTransport: bugfix: do not inject sessionId when it is present
+  * ServerMethods: Add closeSession medthod
+  * Prepare release 6.3.0
+
+  [ José Antonio Santos Cadenas ]
+
+ -- Jose Antonio Santos Cadenas <santoscadenas@gmail.com>  Tue, 19 Jan 2016 17:25:21 +0100
+
 kurento-media-server-6.0 (6.2.0) testing; urgency=medium
 
   [ Jose Antonio Santos Cadenas ]
