--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+kurento-media-server (6.7.2) testing; urgency=medium
+
+  [ Juan Navarro Moreno ]
+  * Remove dependency on our unmaintained fork of libSSL (Kurento/bugtracker#242).
+  * Remove unneeded build dependency: binutils.
+  * Use better defaults for logging levels.
+  * Prepare release 6.7.2
+
+ -- Juan Navarro Moreno <juan.navarro@gmx.es>  Fri, 11 May 2018 10:20:30 +0100
+
 kurento-media-server (6.7.1) testing; urgency=medium
 
   [ Juan Navarro Moreno ]
