--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+kurento-media-server (6.8.1) testing; urgency=medium
+
+  * debian/init: Append (don't truncate) error log on restart
+  * Prepare release 6.8.1
+
+ -- Juan Navarro Moreno <juan.navarro@gmx.es>  Tue, 23 Oct 2018 16:23:46 +0200
+
 kurento-media-server (6.8.0) testing; urgency=medium
 
   * debian/default: Full review, add examples, more comments
