--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kurento-media-server (6.9.1) UNRELEASED; urgency=medium
+
+  * UNRELEASED
+
+ -- Juan Navarro <juan.navarro@gmx.es>  Tue, 11 Dec 2018 16:39:46 +0100
+
 kurento-media-server (6.9.0) testing; urgency=medium
 
   * debian/kurento-media-server.default: Disable colors, improve comments
