--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kurento-media-server (--development-0kurento1) UNRELEASED; urgency=medium
+
+  * UNRELEASED
+
+ -- Juan Navarro <juan.navarro@gmx.es>  Fri, 26 Jul 2019 12:03:25 +0200
+
 kurento-media-server (6.11.0-0kurento1) testing; urgency=medium
 
   * Prepare release 6.11.0-0kurento1
