--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kurento-media-server (--development-0kurento1) UNRELEASED; urgency=medium
+kurento-media-server (6.11.1-0kurento1) UNRELEASED; urgency=medium
 
   * UNRELEASED
 
