--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kurento-media-server (6.12.1-0kurento1) UNRELEASED; urgency=medium
+
+  * UNRELEASED
+
+ -- Juan Navarro <juan.navarro@gmx.es>  Fri, 18 Oct 2019 15:50:23 +0200
+
 kurento-media-server (6.12.0-0kurento1) testing; urgency=medium
 
   * Prepare release 6.12.0-0kurento1
