--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kurento-media-server (6.13.1-0kurento1) UNRELEASED; urgency=medium
+
+  * UNRELEASED
+
+ -- Juan Navarro <juan.navarro@gmx.es>  Thu, 19 Dec 2019 19:17:39 +0100
+
 kurento-media-server (6.13.0-0kurento1) testing; urgency=medium
 
   * Prepare release 6.13.0-0kurento1
