--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kurento-media-server (6.15.1-0kurento1) UNRELEASED; urgency=medium
+
+  * UNRELEASED
+
+ -- Juan Navarro <juan.navarro@gmx.es>  Fri, 06 Nov 2020 11:55:57 +0100
+
 kurento-media-server (6.15.0-0kurento1) testing; urgency=medium
 
   * Prepare release 6.15.0-0kurento1
