--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kurento-media-server (6.16.1-0kurento1) UNRELEASED; urgency=medium
+
+  * UNRELEASED
+
+ -- Juan Navarro <juan.navarro@gmx.es>  Wed, 03 Mar 2021 12:26:48 +0100
+
 kurento-media-server (6.16.0-0kurento1) testing; urgency=medium
 
   * Prepare release 6.16.0-0kurento1
