--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-kurento-media-server (6.16.1-0kurento1) UNRELEASED; urgency=medium
+kurento-media-server (6.17.0-0kurento1) testing; urgency=medium
 
-  * UNRELEASED
+  * Prepare release 6.17.0-0kurento1
+  * debian: .init file should not require settings from .default
+  * debian: don't fail init if ulimit fails
 
- -- Juan Navarro <juan.navarro@gmx.es>  Wed, 03 Mar 2021 12:26:48 +0100
+ -- Juan Navarro <juan.navarro@gmx.es>  Wed, 30 Mar 2022 13:59:42 +0200
 
 kurento-media-server (6.16.0-0kurento1) testing; urgency=medium
 
