--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+kurento-media-server (6.18.0-0kurento1) UNRELEASED; urgency=medium
+
+  [ Kurento ]
+  * UNRELEASED
+
+ -- Juan Navarro <juan.navarro@gmx.es>  Wed, 13 Apr 2022 11:52:23 +0200
+
 kurento-media-server (6.17.0-0kurento1) testing; urgency=medium
 
   * Prepare release 6.17.0-0kurento1
