Prepare for next development iteration

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+kurento-media-server (6.18.1-0kurento1) UNRELEASED; urgency=medium
+
+  [ Kurento ]
+  * UNRELEASED
+
+ -- Juan Navarro <juan.navarro@gmx.es>  Tue, 20 Sep 2022 17:15:33 +0200
+
 kurento-media-server (6.18.0-0kurento1) testing; urgency=medium
 
   [ Kurento ]
